--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           <!-- Place for photo -->
           <div class="col-lg-4 mb-2">
 
-            <img src="https://mdbootstrap.com/img/Photos/Horizontal/People/4-col/img%20%28124%29.jpg" alt="My photo"
+            <img src="assets/img/serving_line.jpg" alt="My photo"
               class="img-fluid z-depth-1">
 
           </div>
