--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <div class="container">
 
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Zoo Catering </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
           aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
